syntax = "proto3";

option go_package = "github.com/goli-nababa/golibaba-backend/proto";

message User {
  uint64 id = 1;
  string uuid = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
  string password = 6;
}

message CreateUserResponse {
  User user = 1;
}

message BlockUserRequest {
    uint64 user_id = 1;
}

message BlockUserResponse {}

message UnblockUserRequest {
  uint64 user_id = 1;
}

message UnblockUserResponse {}

message GetUserByIDRequest {
  uint64 user_id = 1;
}

message GetUserByIDResponse {
  User user = 1;
}

message GetUserByUUIDRequest {
  string uuid = 1;
}

message GetUserByUUIDResponse {
  User user = 1;
}

message DeleteUserByIDRequest {
  uint64 user_id = 1;
}

message DeleteUserByIDResponse {}

message DeleteUserByUUIDRequest {
  string uuid = 1;
}

message DeleteUserByUUIDResponse {}

message AssignRoleRequest {
  uint64 user_id = 1;
  string role = 2;
}

message AssignRoleResponse {}

message CancelRoleRequest {
  uint64 user_id = 1;
  string role = 2;
}

message CancelRoleResponse {}

message AssignPermissionRequest {
  uint64 user_id = 1;
  string role = 2;
  repeated string permissions = 3;
}

message AssignPermissionResponse {}

message RevokePermissionRequest {
  uint64 user_id = 1;
  string role = 2;
  repeated string permissions = 3;
}

message RevokePermissionResponse {}

enum TypeStatementAction {
  StatementActionUnknown = 0;

  StatementActionAllow = 1;
  StatementActionDeny = 2;
}

message PublishStatementRequest {
  repeated uint64 user_ids = 1;
  TypeStatementAction action = 2;
  repeated string permissions = 3;
}

message PublishStatementResponse {}

message CancelStatementRequest {
  uint64 user_id = 1;
  uint64 statement_id = 2;
}

message CancelStatementResponse {}

message CheckAccessRequest {
  uint64 user_id = 1;
  repeated string permissions = 2;
}

message CheckAccessResponse {
  bool has_access = 1;
}

service UserService {
  rpc CreateUser(User) returns (CreateUserResponse);
  rpc BlockUser(BlockUserRequest) returns (BlockUserResponse);
  rpc UnblockUser(UnblockUserRequest) returns (UnblockUserResponse);
  rpc GetUserByID(GetUserByIDRequest) returns (GetUserByIDResponse);
  rpc GetUserByUUID(GetUserByUUIDRequest) returns (GetUserByUUIDResponse);
  rpc DeleteUserByID(DeleteUserByIDRequest) returns (DeleteUserByIDResponse);
  rpc DeleteUserByUUID(DeleteUserByUUIDRequest) returns (DeleteUserByUUIDResponse);
  rpc AssignRole(AssignRoleRequest) returns (AssignRoleResponse);
  rpc CancelRole(CancelRoleRequest) returns (CancelRoleResponse);
  rpc AssignPermission(AssignPermissionRequest) returns (AssignPermissionResponse);
  rpc RevokePermission(RevokePermissionRequest) returns (RevokePermissionResponse);
  rpc PublishStatement(PublishStatementRequest) returns (PublishStatementResponse);
  rpc CancelStatement(CancelStatementRequest) returns (CancelStatementResponse);
  rpc CheckAccess(CheckAccessRequest) returns (CheckAccessResponse);
}